updating protected routes and associated swagger.json
