# routes/users.js
@@ -4,7 +4,7 @@ const usersController = require('../controllers/users.js');
 const validation = require('../middleware/validate.js');
 const auth = require('../controllers/auth.js');
 
-router.get('/', auth.authCheck, usersController.getUsers);
+router.get('/', usersController.getUsers);
 
 router.get('/:id', usersController.findUser);
 
